processed/jira/txt/LU/LU-19871.txt
Key:        LU-19871
Summary:    Lustre doesn't build with MEMCG disabled
Link:       https://jira.whamcloud.com/browse/LU-19871
Type:       Bug
Priority:   Medium
Status:     Closed
Resolution: Fixed
Assignee:   WC Triage
Reporter:   Alex Zhuravlev
Created:    Wed, 11 Feb 2026 06:56:24 +0000
Updated:    Wed, 18 Feb 2026 04:12:57 +0000
Resolved:   Wed, 18 Feb 2026 04:12:57 +0000
Links:      Related: is related to  LU-18687

--- Description ---
CC [M]  /home/alexey/head7/lustre/ptlrpc/pack_generic.o
/home/alexey/head7/libcfs/libcfs/../../lustre_compat/symbols.c:91:6: error: redefinition of 'folio_memcg_lock'
   91 | void folio_memcg_lock(struct folio *folio)
      |      ^~~~~~~~~~~~~~~~
In file included from /home/alexey/head7/libcfs/libcfs/../../lustre_compat/symbols.c:13:
./include/linux/memcontrol.h:1530:20: note: previous definition of 'folio_memcg_lock' with type 'void(struct folio *)'
 1530 | static inline void folio_memcg_lock(struct folio *folio)
      |                    ^~~~~~~~~~~~~~~~
/home/alexey/head7/libcfs/libcfs/../../lustre_compat/symbols.c:99:6: error: redefinition of 'folio_memcg_unlock'
   99 | void folio_memcg_unlock(struct folio *folio)
      |      ^~~~~~~~~~~~~~~~~~
In file included from /home/alexey/head7/libcfs/libcfs/../../lustre_compat/symbols.c:13:
./include/linux/memcontrol.h:1534:20: note: previous definition of 'folio_memcg_unlock' with type 'void(struct folio *)'
 1534 | static inline void folio_memcg_unlock(struct folio *folio)
      |                    ^~~~~~~~~~~~~~~~~~

--- Comment (gerrit, Wed, 11 Feb 2026 07:02:49 +0000) ---
"Alex Zhuravlev " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/63934

Subject: LU-19871 compat: check whether MEMCG is enabled

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: da1a5e83ba37d3221963a08a859952f2f100c9b9
